default.css
* {
  margin: 0;
  padding: 0;
}

body {
  background-image: url("assets/background.png");
  display: flex;
  flex-direction: column;
  align-items: center;
  color: rgb(0, 0, 76);
  position: relative;
}

div {
}

.row {
  display: flex;
  flex-direction: row;
}

.col {
  display: flex;
  flex-direction: column;
}

.active {
  background-color: rgb(171, 209, 234);
  outline: 5px rgb(133, 162, 182) solid;
}

#focused {
  background-color: green;
}

.button {
  width: 100px;
  outline-offset: -5px;
  background-color: white;
}

#mainDisplay {
  height: 85vh;
  background-color: transparent;
}

#avatardisplay {
  width: 50vw;
  background-color: white;
  border: 10px rgb(171, 209, 234) solid;
  position: relative;
  overflow: hidden;
}

#avatardisplay img {
  position: absolute;
  left: 50%;

  height: 100%;
  transform: translateX(-50%);
  width: auto;
}

#optionSection {
  overflow-y: scroll;
  outline: none;
  outline-offset: -5px;
  background-color: transparent;
  width: 5vw;
}
#optionSection::-webkit-scrollbar {
  display: none;
}

.optionButton {
  border-radius: 10px 0px 0px 10px;
  border: 1px rgb(159, 147, 230) solid;
  outline-offset: -5px;
  width: 5vw;
  height: 10vh;
  background-color: white;
}

.optionButton:hover {
  transition: all;
  background-color: rgb(138, 169, 189);
}

#selectSection {
  background-color: white;
  border: 5px rgb(171, 209, 234) solid;
  overflow-y: scroll;
}

#selectSection::-webkit-scrollbar {
}

.selectButton {
  width: 100px;
}

#controllerBox {
  background-color: transparent;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-items: center;
  position: absolute;
  bottom: 5vh;
  right: 50vh;
  pointer-events: none;
}

.adjustButton {
  width: 40px;
  height: 40px;
  border: none;
  background-color: transparent;
  pointer-events: all;
}
.adjustButton img {
  width: 100%;
  height: 100%;
}

.adjustButton:hover img {
  transition: all 0.3s;
  transform: scale(1.3);
  filter: drop-shadow(3px 3px 5px rgb(171, 209, 234));
}
@media (max-width: 768px) {
  #mainDisplay {
    width: 80vw;
    flex-direction: column;
  }

  #avatardisplay {
    height: 100%;
    width: auto;

    display: block;
  }

  #optionSection {
    overflow-x: scroll;
    flex-direction: row;
  }

  .optionButton {
    width: 100%;
  }

  #selectSection {
    height: 30%;
    overflow-x: scroll;
    flex-direction: row;
  }
  #selectSection img {
  }

  .button {
    width: auto;
  }
}

